replace "id"-s with "class"-es
Replace "id' selectors with "class".

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     </header>
 
-    <div id="logo-section">
+    <div class="logo-section">
       <div class="pair-of-logos">
         <img class="logo logo1" src="https://source.unsplash.com/1600x900/?nature,sea" alt="Photo of animals">
         <img class="logo logo2" src="https://source.unsplash.com/1600x900/?nature,mountains" alt="Photo of animals">
@@ -30,18 +30,18 @@
       </div>
     </div>
 
-    <div id="sub-logo-section3">
-      <article id="div-three-one">
+    <div class="sub-logo-section3">
+      <article class="div-three-one">
         <h2>3.1</h2>
       </article>
-      <article id="div-three-two">
+      <article class="div-three-two">
         <h2>3.2</h2>
       </article>
     </div>
 
-    <div id="container-for-4-5-6">
+    <div class="container-for-4-5-6">
 
-      <div id="container-for-4-5">
+      <div class="container-for-4-5">
 
         <article class="fourth div-four-one">
           <h2>4.1</h2>
@@ -53,7 +53,7 @@
           <h2>4.3</h2>
         </article>
 
-        <section id="section5">
+        <section class="section5">
           <h2>5</h2>
         </section>
 
